# AndroidOpus

./: README.md  article.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/forasoft/androidopus/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jniopus.c
app/src/main/cpp/opus/: Makefile  config.h  config.status  libopus.la  libtool  opus-uninstalled.pc  opus.pc  opus_compare  opus_demo  repacketizer_demo
app/src/main/cpp/opus/celt/.deps/: bands.Plo  celt.Plo  celt_decoder.Plo  celt_encoder.Plo  celt_lpc.Plo  cwrs.Plo  entcode.Plo  entdec.Plo  entenc.Plo  kiss_fft.Plo  laplace.Plo  mathops.Plo  mdct.Plo  modes.Plo  pitch.Plo  quant_bands.Plo  rate.Plo  vq.Plo
app/src/main/cpp/opus/celt/tests/: test_unit_cwrs32  test_unit_dft  test_unit_entropy  test_unit_laplace  test_unit_mathops  test_unit_mdct  test_unit_rotation  test_unit_types
app/src/main/cpp/opus/celt/tests/.deps/: test_unit_cwrs32.Po  test_unit_dft.Po  test_unit_entropy.Po  test_unit_laplace.Po  test_unit_mathops.Po  test_unit_mdct.Po  test_unit_rotation.Po  test_unit_types.Po
app/src/main/cpp/opus/celt/x86/.deps/: celt_lpc_sse4_1.Plo  pitch_sse.Plo  pitch_sse2.Plo  pitch_sse4_1.Plo  vq_sse2.Plo  x86_celt_map.Plo  x86cpu.Plo
app/src/main/cpp/opus/silk/.deps/: A2NLSF.Plo  CNG.Plo  HP_variable_cutoff.Plo  LPC_analysis_filter.Plo  LPC_fit.Plo  LPC_inv_pred_gain.Plo  LP_variable_cutoff.Plo  NLSF2A.Plo  NLSF_VQ.Plo  NLSF_VQ_weights_laroia.Plo  NLSF_decode.Plo  NLSF_del_dec_quant.Plo  NLSF_encode.Plo  NLSF_stabilize.Plo  NLSF_unpack.Plo  NSQ.Plo  NSQ_del_dec.Plo  PLC.Plo  VAD.Plo  VQ_WMat_EC.Plo  ana_filt_bank_1.Plo  biquad_alt.Plo  bwexpander.Plo  bwexpander_32.Plo  check_control_input.Plo  code_signs.Plo  control_SNR.Plo  control_audio_bandwidth.Plo  control_codec.Plo  debug.Plo  dec_API.Plo  decode_core.Plo  decode_frame.Plo  decode_indices.Plo  decode_parameters.Plo  decode_pitch.Plo  decode_pulses.Plo  decoder_set_fs.Plo  enc_API.Plo  encode_indices.Plo  (+37 more)
app/src/main/cpp/opus/silk/float/.deps/: LPC_analysis_filter_FLP.Plo  LPC_inv_pred_gain_FLP.Plo  LTP_analysis_filter_FLP.Plo  LTP_scale_ctrl_FLP.Plo  apply_sine_window_FLP.Plo  autocorrelation_FLP.Plo  burg_modified_FLP.Plo  bwexpander_FLP.Plo  corrMatrix_FLP.Plo  encode_frame_FLP.Plo  energy_FLP.Plo  find_LPC_FLP.Plo  find_LTP_FLP.Plo  find_pitch_lags_FLP.Plo  find_pred_coefs_FLP.Plo  inner_product_FLP.Plo  k2a_FLP.Plo  noise_shape_analysis_FLP.Plo  pitch_analysis_core_FLP.Plo  process_gains_FLP.Plo  regularize_correlations_FLP.Plo  residual_energy_FLP.Plo  scale_copy_vector_FLP.Plo  scale_vector_FLP.Plo  schur_FLP.Plo  sort_FLP.Plo  warped_autocorrelation_FLP.Plo  wrappers_FLP.Plo
app/src/main/cpp/opus/silk/tests/: test_unit_LPC_inv_pred_gain
app/src/main/cpp/opus/silk/tests/.deps/: test_unit_LPC_inv_pred_gain.Po
app/src/main/cpp/opus/silk/x86/.deps/: NSQ_del_dec_sse4_1.Plo  NSQ_sse4_1.Plo  VAD_sse4_1.Plo  VQ_WMat_EC_sse4_1.Plo  x86_silk_map.Plo
app/src/main/cpp/opus/src/.deps/: analysis.Plo  mapping_matrix.Plo  mlp.Plo  mlp_data.Plo  opus.Plo  opus_compare.Po  opus_decoder.Plo  opus_demo.Po  opus_encoder.Plo  opus_multistream.Plo  opus_multistream_decoder.Plo  opus_multistream_encoder.Plo  opus_projection_decoder.Plo  opus_projection_encoder.Plo  repacketizer.Plo  repacketizer_demo.Po
app/src/main/java/com/forasoft/androidopus/: MainActivity.java  Opus.java  WorkerThread.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/forasoft/androidopus/: ExampleUnitTest.java
docs/: README.md
gradle/wrapper/: gradle-wrapper.properties
